<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGrey"
    android:orientation="vertical"
    tools:context=".VideoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



    <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
        android:id="@+id/youtube_player_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:enableAutomaticInitialization="false"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="ifContentScrolls"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">


                    <TextView
                        android:id="@+id/title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/black"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="@font/heebo"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/video_download_btn"
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/custom_youtube_downloadable_button"
                        android:text="@string/share"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/show_comment"
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:background="@drawable/custom_youtube_downloadable_button"
                        android:text="@string/showComment"
                        android:textColor="@color/white" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </LinearLayout>

    </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        app:layout_behavior="@string/bottom_sheet_behavior"
        app:behavior_peekHeight="0dp"
        android:background="@color/darkGrey">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/red"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/heading_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/merriweather_bold"
                    android:padding="8dp"
                    android:text="@string/comment"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/comment_bottom_sheet_close_btn"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="8dp"
                    android:background="@drawable/close"
                    android:layout_alignEnd="@id/heading_comment"
                    android:layout_alignParentEnd="true"/>

                <LinearLayout
                    android:id="@+id/container_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/heading_comment"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/video_activity_edit_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:hint="@string/add_a_comment"
                        android:inputType="text"
                        android:paddingLeft="8dp"
                        android:paddingTop="8dp"
                        android:paddingRight="8dp"
                        android:paddingBottom="8dp"
                        android:textColor="#111"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/comment_video_activity_btn"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@drawable/video_activity_comment_button_bg" />

                </LinearLayout>

                <TextView
                    android:id="@+id/count_comment_video_activity_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_below="@id/container_comment"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/no_comment_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:visibility="gone"
                    android:layout_below="@id/count_comment_video_activity_tv"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/count_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/black"
                        android:text="@string/zero_comment_msg"
                        android:visibility="gone"
                        android:textSize="20sp" />

                </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/comment_video_activity_RV"
                        android:layout_width="match_parent"
                        android:layout_below="@id/count_comment_video_activity_tv"
                        android:visibility="visible"
                        android:layout_height="wrap_content">

                    </androidx.recyclerview.widget.RecyclerView>




            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
